# 2018_Config

./: .gitignore  README.md  ~$游戏需求.doc
Config/Table/ServerOut/: DB_Server.xml
Config/Table/Table/: Item.xlsx  skill.xlsx
Tools/DataBack/Proto/: proto_command.proto  proto_message_two.proto  proto_struct.proto
Tools/Linux_Res/: ServerConfig  Serverframwork  interview skill
Tools/Linux_Res/Linux_Study/Linux C++_Study/: LInux_Library~  一些重要的库~
Tools/Linux_Res/Linux_Study/Linux Problem/: Eclipse导入工程要点  Eclipse突然反应迟钝问题  共享库配置问题~  无法登陆桌面问题
Tools/Linux_Res/Linux_Study/MariaDB/: 字段属性  游戏服务器几个重要的主键
Tools/Linux_Res/Linux_Study/makefile/: .build Syntax.swo  .build Syntax.swp  .makefile.swn  .makefile.swo  .makefile.swp  build Syntax~  study1  study2
Tools/Linux_Res/Linux_Study/makefile/src/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello  main.cpp  test.cpp  test.h
Tools/Linux_Res/Linux_Study/makefile/src/.deps/: main.Po  test.Po
Tools/Linux_Res/Linux_Study/makefile/src/autom4te.cache/: output.0  requests  traces.0  traces.1
Tools/Linux_Res/Linux_Study/serverModel/: server model
Tools/Linux_Res/Linux_Study/shell/: Untitled Document~  (+5 more)
Tools/Linux_Res/MariaDB/: mariadb_command  mariadb_study
Tools/Linux_Res/dynamiclibrary/: dynamiclibraryConfig.txt
Tools/Linux_Res/makefile/: makefile1  makefile2  makefile3
Tools/Linux_Res/netConfig/: netConfig
Tools/Linux_Res/serivice/: service
Tools/Linux_Res/time/: time
Tools/Linux_Res/vim/: WindowVimConfig.txt  _vimrc  ctags  vim_basic
Tools/win10/vim/: _vimrc
(+21 files in other folders)
