#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(xuke_Test, 5.0, 825126369@qq.com)
AC_CONFIG_SRCDIR([test.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(xuke_Test,5.0)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT()
